--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,38 @@
 .app {
-  height: 100vh;
-  width: 100vw;
+  font-family: "Raleway", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  height: 120vh;
+  width: 100%;
   transition: background-color 1s ease-in;
+ 
+  background-color: #9CCEF4;
 }
 
-.app__header,
+
 .app__main {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 0px;
   font-family: "Raleway", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
+  background-color: #9CCEF4;
+  
 }
+.app__header{
+
+  width: 100%;
+ height:150px;
+  background-color: rgb(117, 158, 218);
+}
+
+
 
 /*  Search bar */
 
 /* Current weather */
 
-div {
-  border: 5px solid red;
-}
